--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="card">
-        <img src="/img/logo.svg" />
+        <img src="/img/logo-pagina-unisaomiguel.png" />
         <h2>LOGIN CRM</h2>
         <form class="form">
             <input spellcheck="false" class="control" type="email" placeholder="Email" />
