atualização de abas de senha e login

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 
 <body>
     <div class="card">
-        <img src="/img/logo-pagina-unisaomiguel.png" />
+        <img src="/img/logo.svg" />
         <h2>LOGIN CRM</h2>
         <form class="form">
-            <input spellcheck="false" class="control" type="email" placeholder="Email" />
+            
+            <input spellcheck="false" class="control" type="text" placeholder="Login" autocomplete="email"/>
             <div class="password">
-                <input spellcheck="false" class="control" id="password" type="password" placeholder="Password"
+                <input spellcheck="false" class="control" id="password" type="password" placeholder="Senha"
                     autocomplete="off" />
                 <button class="toggle" type="button" onclick="togglePassword(this)"></button>
             </div>
