--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
     <title>LOGIN CRM</title>
-    <link rel="stylesheet" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./estilos/bootstrap.min.css">
+    <link rel="stylesheet" href="./estilos/style.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
@@ -11,8 +13,8 @@
 
 <body>
     <div class="card">
-        <img src="/img/logo.svg" />
-        <h2>LOGIN CRM</h2>
+        <img src="/img/8400_5_2_04.jpg"/>
+        <h2>Josias Projeto Plataforma</h2>
         <form class="form">
             
             <input spellcheck="false" class="control" type="text" placeholder="Login" autocomplete="email"/>
@@ -24,6 +26,33 @@
             <button class="control" type="button">Sign Up</button>
         </form>
     </div>
+
+    <div class="modal-full" id="telInicial">
+
+        <div class="m-header">
+            <div class="container">
+                <a class="btn btn-white btn-sm float-right">
+                    Sair
+                </a>
+            </div>
+        </div>
+
+        <div class="m-body">
+
+        </div>
+
+        <div class="m-footer">
+
+        </div>
+
+    </div>
+
+
+
+
+
+
+
     <script type="text/javascript" src="main.js"></script>
 </body>
 
