--- a/index.html
+++ b/index.html
@@ -4,38 +4,40 @@
 <head>
     <title>LOGIN CRM</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./estilos/bootstrap.min.css">
-    <link rel="stylesheet" href="./estilos/style.css"/>
+   <!-- <link rel="stylesheet" href="./estilos/bootstrap.min.css">-->
+    <link rel="stylesheet" href="./estilos/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
 </head>
 
 <body>
-    <div class="card">
-        <img src="/img/8400_5_2_04.jpg"/>
+    <div class="card" id="cardDiv">
+        <img src="/img/8400_5_2_04.jpg" />
         <h2>Josias Projeto Plataforma</h2>
         <form class="form">
-            
-            <input spellcheck="false" class="control" type="text" placeholder="Login" autocomplete="email"/>
+
+            <input spellcheck="false" class="control" type="text" placeholder="Login" autocomplete="email" />
             <div class="password">
                 <input spellcheck="false" class="control" id="password" type="password" placeholder="Senha"
-                    autocomplete="off" />
+                    autocomplete="off"  maxlength="10"/>
                 <button class="toggle" type="button" onclick="togglePassword(this)"></button>
             </div>
             <button class="control" type="button">Sign Up</button>
         </form>
     </div>
 
-    <div class="modal-full" id="telInicial">
+   <div class="modal-full" id="telInicial">
 
-        <div class="m-header">
-            <div class="container">
-                <a class="btn btn-white btn-sm float-right">
-                    Sair
-                </a>
-            </div>
-        </div>
+    <div class="m-header">
+        <div class="container">
+            <a class="btn-white btn-sm float-right" onclick="">
+                Sair
+            </a>
+    </div>
 
         <div class="m-body">
 
@@ -51,9 +53,9 @@
 
 
 
-
-
-    <script type="text/javascript" src="main.js"></script>
+    <!--<script src="scripts/jquery-1.12.4.min.js"></script>-->
+    <!--<script src="scripts/navbarfunctions.js"></script>-->
+    <script type="text/javascript" src="./scripts/main.js"></script>
 </body>
 
 </html>
