alterações nas imagens

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
 <body>
     <div class="card" id="cardDiv">
-        <img src="/img/8400_5_2_04.jpg" />
+        <img src="./img/logo.svg" />
         <h2>Josias Projeto Plataforma</h2>
         <form class="form">
 
-            <input spellcheck="false" class="control" type="text" placeholder="Login" autocomplete="email" />
+            <input spellcheck="false" class="control" type="text" placeholder="Login" autocomplete="nickname" />
             <div class="password">
                 <input spellcheck="false" class="control" id="password" type="password" placeholder="Senha"
                     autocomplete="off"  maxlength="10"/>
