alterado fontes e cores

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <div class="card" id="cardDiv">
-        <img src="./img/logo.svg" />
+        <img src="./img/8400_5_2_04.jpg" />
         <h2>Josias Projeto Plataforma</h2>
         <form class="form">
 
