atualizado redirecionaomento apos preencher cadastros

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <button class="control" type="submit">Sign Up</button>
         </form>
         <form class="cadastro">
-            <button class="cad-control">cadastre-se</button>
+            <button class="cad-control" id="goToSignupBtn">cadastre-se</button>
         </form>
     </div>
 
