--- a/signin.html
+++ b/signin.html
@@ -25,7 +25,7 @@
                     autocomplete="off"  maxlength="10"/>
                 <button class="toggle" type="button" id="view-password"></button>
             </div>
-            <button class="control-cad" type="submit">Cadastre-se</button>
+            <button class="control-cad" type="submit" id="cadastrarBtn">Cadastre-se</button>
         </form>
     </div>
     
