--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
                 <button class="toggle" type="button" id="view-password"></button>
             </div>
             <button class="control" type="submit">Sign Up</button>
-        </form>
-        <form class="cadastro">
+
             <button class="cad-control" id="goToSignupBtn">cadastre-se</button>
         </form>
+        <!--<form class="cadastro">
+           
+        </form>-->
     </div>
 
    
