corrigido o problema no cadastre-se

--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
                 <button class="toggle" type="button" id="view-password"></button>
             </div>
             <button class="control" type="submit">Sign Up</button>
-
-            <button class="cad-control" id="goToSignupBtn">cadastre-se</button>
         </form>
-        <!--<form class="cadastro">
-           
-        </form>-->
+
+        
+
+        <form class="cadastro" id="goToSignupBtn">
+           <button class="cad-control" >cadastre-se</button>
+        </form>
     </div>
 
    
